--- a/vvsite/assets/public/website.css
+++ b/vvsite/assets/public/website.css
@@ -2,6 +2,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    background-color: #F4D793;
+    color: #FFF6DA;
 }
 
 .overlay {
